[package]
name = "anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
